# home

./: README.md
ros_home_ws_catherine/install/: local_setup.sh  setup.sh
ros_home_ws_catherine/install/orient_to_north/share/orient_to_north/: package.bash  package.dsv  package.sh  package.xml  package.zsh
ros_home_ws_catherine/log/: latest_build
ros_home_ws_catherine/src/install/: local_setup.sh  setup.sh
ros_home_ws_catherine/src/log/: latest_build
ros_home_ws_catherine/src/orient_to_north/: setup.cfg  setup.py
ros_home_ws_matt/aarch64_build/numsr_turtlebot/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh  colcon_command_prefix_build.sh.env  install_manifest.txt
ros_home_ws_matt/aarch64_build/nuturtlebot_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__nuturtlebot_msgs.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_generator_type_description__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  (+2 more)
ros_home_ws_matt/aarch64_install/: setup.sh
ros_home_ws_matt/aarch64_install/numsr_turtlebot/share/numsr_turtlebot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_home_ws_matt/aarch64_install/nuturtlebot_msgs/share/nuturtlebot_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_home_ws_matt/aarch64_install/nuturtlebot_msgs/share/nuturtlebot_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_nuturtlebot_msgs__rosidl_generator_cExport.cmake  export_nuturtlebot_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  nuturtlebot_msgs__rosidl_typesupport_cppExport-noconfig.cmake  nuturtlebot_msgs__rosidl_typesupport_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros_home_ws_matt/aarch64_install/nuturtlebot_msgs/share/nuturtlebot_msgs/msg/: SensorData.json  WheelCommands.msg
ros_home_ws_matt/install/: local_setup.sh  setup.sh
ros_home_ws_matt/log/: latest_build
(+93 files in other folders)
