<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>numsr_turtlebot</name>
  <version>0.0.1</version>
  <description>Low-level control of the turtlebot3</description>
  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>turtlebot3_msgs</depend>
  <depend>nuturtlebot_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
